# llmwrapper

./: .env.example  .gitignore  Cargo.toml
src/: main.rs
src/domains/: mod.rs
src/domains/agent/: controller.rs  mod.rs  model.rs  route.rs  validator.rs
src/domains/chat/: controller.rs  mod.rs  model.rs  route.rs  service.rs  validator.rs
src/shared/: abstract_validator.rs  mod.rs
src/shared/auth/: validator.rs
src/shared/memory/: service.rs
src/shared/ollama/: client.rs  mod.rs  service.rs
